Current development version

  - feat: icons for additional information for highlights

          + Notes exists for the highlight (*)

          + The highlight position auto-adjusted (d)

          + Uses the new `org-remark-highlights-after-load-functions'

          + Icons are customizable. You can also disable icons by setting
            the respective customizing variable to nil

          + The face of auto-adjusted is customizable with face
            `org-remark-highlighter-warning'

          + `org-remark-toggle' also toggles the icon display

  - feat: nov.el support for epub books

         + The link is added to the notes org file correctly pointing
           back to epub's highlight location with using :nov link type
           added by nov.el.l

  - feat: Adjust positions after load

         + This is useful especially for epubs via nov.el. Nov.el
           renders tables on differently depending on the size of the
           window. This causes the positions of subsequent text elements
           to move depending on the window size when the page is
           rendered, dislocating the positions of highlights. This
           feature attemps to auto-correct the location on the fly. The
           feature works generically, so Org-remark attemps to correct
           minior edits to websites (for EWW).

         + The fact that a given highlight has been automatically moved
           is indicated by an icon

  - feat: org-remark-highlights-after-load-functions
          Abnormal hook

  - fix: Make load process robust

         + When error occurs during the load process, instead of
           emitting an error, Org-remark now halts the load process and
           returns without an error. This has been proven useful
           especially for epub support with nov.el. Nov.el renders by
           reusing the same buffer instead of generating a new one. When
           error occurs during the load process (e.g. user accidentally