@@ -1,5 +1,14 @@
 Current development version
 
+  - feat(info): Org-remark supports Info
+
+          No suitable hook is avaialble to trigger a function after the Info node
+          is rendered. This is necessary as Info renders a new node in the same
+          buffer (in the same way as Nov.el does).
+
+          Advice has been implemented. It is added and removed by
+          `org-remark-info-mode`.
+
   - feat: icons for additional information for highlights
 
           + Notes exists for the highlight (*)
